test/expected/declare_o_dot_k.out
struct S; declare . as operator returning S
         ^
10: error: operator . can not be overloaded
